# taskpackage

./: .gitignore  Makefile  README.md  Task1.py  Task2.py  __init__.py  main.py  pyproject.toml  repositoryTP.pypirc  setup.cfg  setup.py
LibraryPractice.egg-info/: PKG-INFO  SOURCES.txt
lib/: Task10.py  Task6.py  __init__.py
package1/: Task1.py  Task2.py  Task3_a.py  Task3_b.py  Task4_a.py
package2/: Task5.py  Task7_a.py  Task7_b.py  Task8.py
